fixed top menu z-index

--- a/pylonshq/scss/src/app.scss
+++ b/pylonshq/scss/src/app.scss
@@ -98,7 +98,7 @@ header, footer, section, #main {
                 display: none;
                 background-color: #151515;
                 position: absolute;
-                z-index: 1000;
+                z-index: 10000;
                 list-style-type: none;
                 padding: 5px 0 10px 0;
                 margin: 0;
